# cbdai

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  architecture.md  benchmark.c  cut_coverage_output.py  dis.c  format.txt  generate_enum_string.py  main.c  main.py  manage.py  manage.sh  pyproject.toml  repl.c  runfile.c  show_ast.c
atstr/: atstr.c  atstr.h  test_atstr.c
cbdai/: dai.c  dai.h
dai/: dai_canvas.c  dai_canvas.h  dai_canvas_keycode.h  dai_fmt.c  dai_fmt.h  daicmd.c  daicmd.h  main.c
dai/std/: dai_canvas.c  dai_canvas.h  daistd.c  daistd.h
daibenchmarks/: fibonacci1.dai  property1.dai
examples/: canvas.dai  canvas_enum.dai  canvas_image.dai  path_operation.dai  yanhua.dai
examples/sdf/: readme.md  sdf.py  sdf1.dai  sdf5.dai  sdf7.dai
scripts/: SDL_keycode.txt  clion.sh  cut_coverage_output.py  generate_enum_string.py  generate_sdl_key.py  unify_include_guard.py
src/: dai.c  dai.h  dai_array.c  dai_array.h  dai_assert.h  dai_ast.h  dai_builtin.c  dai_builtin.h  dai_chunk.c  dai_chunk.h  dai_codecs.c  dai_codecs.h  dai_common.h  dai_compile.c  dai_compile.h  dai_debug.c  dai_debug.h  dai_error.c  dai_error.h  dai_malloc.c  dai_malloc.h  dai_memory.c  dai_memory.h  dai_object.c  dai_object.h  dai_object_operation.c  dai_object_operation.h  dai_parse.c  dai_parse.h  dai_parseint.c  dai_parseint.h  dai_stringbuffer.c  dai_stringbuffer.h  dai_symboltable.c  dai_symboltable.h  dai_table.c  dai_table.h  dai_tokenize.c  dai_tokenize.h  dai_utils.c  (+9 more)
src/atstr/: atstr.c  atstr.h
src/dai_ast/: dai_astArrayLiteral.c  dai_astArrayLiteral.h  dai_astBreakStatement.c  dai_astBreakStatement.h  dai_astClassExpression.c  dai_astClassExpression.h  dai_astClassMethodStatement.c  dai_astClassMethodStatement.h  dai_astClassVarStatement.c  dai_astClassVarStatement.h  dai_astContinueStatement.c  dai_astContinueStatement.h  dai_astDotExpression.c  dai_astDotExpression.h  dai_astFloatLiteral.c  dai_astFloatLiteral.h  dai_astForInStatement.c  dai_astForInStatement.h  dai_astFunctionStatement.c  dai_astFunctionStatement.h  dai_astMapLiteral.c  dai_astMapLiteral.h  dai_astMethodStatement.c  dai_astMethodStatement.h  dai_astSelfExpression.c  dai_astSelfExpression.h  dai_astSubscriptExpression.c  dai_astSubscriptExpression.h  dai_astSuperExpression.c  dai_astSuperExpression.h  dai_astWhileStatement.c  dai_astWhileStatement.h  dai_astassignstatement.c  dai_astassignstatement.h  dai_astbase.h  dai_astblockstatement.c  dai_astblockstatement.h  dai_astboolean.c  dai_astboolean.h  dai_astcallexpression.c  (+34 more)
src/dai_compile/: dai_compilerbase.h  dai_compilercommon.h
src/dai_objects/: dai_object_array.c  dai_object_array.h  dai_object_base.c  dai_object_base.h  dai_object_class.c  dai_object_class.h  dai_object_error.c  dai_object_error.h  dai_object_function.c  dai_object_function.h  dai_object_map.c  dai_object_map.h  dai_object_module.c  dai_object_module.h  dai_object_range.c  dai_object_range.h  dai_object_string.c  dai_object_string.h  dai_object_struct.c  dai_object_struct.h  dai_object_tuple.c  dai_object_tuple.h
src/dai_parse/: dai_parseArrayLiteral.h  dai_parseBlockStatementOfClass.h  dai_parseBreakStatement.h  dai_parseCallExpression.h  dai_parseClassMethodStatement.h  dai_parseClassStatement.h  dai_parseClassVarStatement.h  dai_parseContinueStatement.h  dai_parseDotExpression.h  dai_parseExpression.h  dai_parseExpressionOrAssignStatement.h  dai_parseExpressionStatement.h  dai_parseFunctionLiteral.h  dai_parseFunctionStatement.h  dai_parseGroupedExpression.h  dai_parseIdentifier.h  dai_parseIfStatement.h  dai_parseInfixExpression.h  dai_parseInsVarStatement.h  dai_parseInteger.h  dai_parseMethodStatement.h  dai_parseNil.h  dai_parsePrefixExpression.h  dai_parseReturnStatement.h  dai_parseSelfExpression.h  dai_parseStatementOfClass.h  dai_parseStringLiteral.h  dai_parseSuperExpression.h  dai_parseWhileStatement.h  dai_parseassignstatement.h  dai_parseblockstatement.h  dai_parseboolean.h  dai_parsecallexpression.h  dai_parseclassstatement.h  dai_parseexpression.h  dai_parseexpressionstatement.h  dai_parsefunctionliteral.h  dai_parsegroupedexpression.h  dai_parseidentifier.h  dai_parseifstatement.h  (+11 more)
test/: dai_c_function_example.dai  dai_call_example.dai  dai_variable_example.dai  parse_example.dai  test.c  test.h  test_ast.c  test_atstr.c  test_cbdai.c  test_chunk.c  test_codecs.c  test_compile.c  test_dai.c  test_dai_tokenize.c  test_demo.c  test_parse.c  test_parseint.c  test_stringbuffer.c  test_symboltable.c  test_table.c  test_value.c  test_vm.c  tokenize_example.txt
test/codes/test_vm/: test_class_instance_1.dai  test_class_instance_10.dai  test_class_instance_11.dai  test_class_instance_12.dai  test_class_instance_13.dai  test_class_instance_14.dai  test_class_instance_15.dai  test_class_instance_16.dai  test_class_instance_17.dai  test_class_instance_18.dai  test_class_instance_19.dai  test_class_instance_2.dai  test_class_instance_3.dai  test_class_instance_4.dai  test_class_instance_5.dai  test_class_instance_6.dai  test_class_instance_7.dai  test_class_instance_8.dai  test_class_instance_9.dai  test_conditionals_1.dai  test_conditionals_2.dai  test_conditionals_3.dai  test_conditionals_4.dai  test_conditionals_5.dai  test_conditionals_6.dai  test_conditionals_7.dai  test_exceed_call_stack.dai  test_exceed_vm_stack.dai
test/runfile/: file_rw.dai
test/runfile/sdf/: sdf.py  sdf1.dai  sdf2.dai  sdf3.dai  sdf4.dai  sdf5.dai  sdf6.dai  sdf7.dai
test/vm_testcases/: 01_many_local.dai  02_many_argument.dai  03_complex_scope.dai  04_bubblesort.dai  05_insertsort.dai  06_quicksort.dai  07_selectsort.dai  08_countingsort.dai  09_mergesort.dai  10_heapsort.dai  11_multi_loop.dai  12_import.dai  readme.md
